<resources>
    <string name="app_name">Run0rD1e</string>
    <string name="username">Username: </string>
    <string name="healthpoint">Health point: </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_friends_list">Friends List</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movementType are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="sunrise_image">sunrise image</string>
    <string name="sunset_image">sunset image</string>
    <string name="wind_image">wind image</string>
    <string name="add_friends">Add Friends</string>
    <string name="my_position">My position</string>
    <string name="phantom">phantom</string>
    <string name="inventory">Inventory</string>
    <string name="weather">Weather</string>
    <string name="market">MARKET</string>
    <string name="rules_title">Rules</string>
    <string name="rules_intro_title">Intro</string>
    <string name="rules_intro_content_start">In this game you play on the map.</string>
    <string name="rules_intro_content_end">To play you will need to activate your current position and be ready to run away.</string>
    <string name="rules_mode_title">Playmode</string>
    <string name="rules_solo_title">Soloplayer: </string>
    <string name="rules_solo_content">You can start the game.</string>
    <string name="rules_multi_title">Multiplayer: </string>
    <string name="rules_multi_content">Two or more players can join a game room/lobby and start a multiplayer game against each other.</string>
    <string name="rules_howPlay_title">How to play?</string>
    <string name="rules_howPlay_content_start">
        Some enemies (controlled by the computer) \nappear on the map.\n\nIf the player
        stands too close to an enemy,\n he loses heatlhpoints.\n\nIf a player\'s health drops to zero, he disappears.\n\nAfter some time,
        more enemies appear.\n\nThe player with the highest score will win the game.\n\n
    </string>
    <string name="rules_item_title">Items</string>
    <string name="rules_item_content">If you use the healthpack then you can increase your healthpoints about 10 points.</string>
    <string name="rules_item_content_shrink">If no player has lost within a given time the map <b>shrinks.</b></string>
    <string name="rules_item_content_market">You can collect coins to buy healthpacket in the <b>market.</b></string>
    <string name="rules_inventory_title">Inventory</string>
    <string name="rules_inventory_content"><b>Inventory contains the items</b></string>
    <string name="rules_leaderboard_title">Leaderboard / Score </string>
    <string name="rules_leaderboard_content">
        Each 10 seconds the score will be updated and if the player run more than 10 meters in 10 secs
        the player will get 20 points instead of 10 points.
    </string>
    <string name="rules_leaderboard_content_one"><b>General score</b> is a <b>long-term score</b> which\nis the sum of the <b>in-game score</b>.\nThat means the more game round you play
        \nthe higher will be the <b>general score</b>.
    </string>
    <string name="rules_chat_title">Chat and Offline</string>
    <string name="rules_chat_content"><b>CHAT:</b> In Multiplayer mode you can
        chat with your friends.\n\n<b>OFFLINE</b> You see the leaderboard and the chat.
    </string>
    <string name="MessageInput">Write a message</string>
    <string name="placeholder">TextView</string>
    <string name="placeholderImg">Image</string>
    <string name="chat_user">Rose</string>
    <string name="chat_exampleMsg">How are you doing? This is a long message that should probably wrap.</string>
    <string name="GameOverLabel">Game 0vr</string>
    <string name="BackMain">Go back to main menu</string>
    <string name="lb_ranking">1</string>
    <string name="lb_user">Admin</string>
    <string name="lb_score">100</string>
    <string name="lb_title">Leaderboard</string>
    <string name="ranking_stage">Ranking Stage</string>
    <string name="login_greeting">Welcome to</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_offline">Offline Mode</string>
    <string name="login_member">You are not a member?</string>
    <string name="login_register">Register</string>
    <string name="main_solo">Solo Mode</string>
    <string name="main_multi">Multi Mode</string>
    <string name="main_rules">Rules</string>
    <string name="main_leaderboard">LeaderBoard</string>
    <string name="main_logout">Logout</string>
    <string name="main_friends">Friends</string>
    <string name="market_title">MARKET</string>
    <string name="market_buyItems">Buy Items</string>
    <string name="market_cost">Cost: \nValue:</string>
    <string name="market_money">Money:</string>
    <string name="register_newAccount">Create a new account</string>
    <string name="register_username">Username</string>
    <string name="register_pw_conf">Password confirmation</string>
    <string name="itembox_shield">Shield</string>
    <string name="itembox_number">Number:</string>
    <string name="itembox_amount">5</string>
    <string name="itembox_title">USE ITEM</string>
    <string name="ButtonPageOne">Page 1</string>
    <string name="ButtonPageTwo">Page 2</string>
    <string name="ButtonMainPage">Start Site</string>
    <string name="SendMessageButton">itemIcon</string>
    <string name="ButtonName">Button</string>
    <string name="market_shinker_btn">Shrinker Button</string>
    <string name="market_shield_btn">Shield Button</string>
    <string name="market_healthpack_btn">Healthpack Button</string>
    <string name="ImgItemIcon">itemIcon</string>
    <string name="ImgBulb">BulbRulesIntro</string>
    <string name="ImgModi">modi</string>
    <string name="ImgPlayIcon">playIcon</string>
    <string name="_1">1</string>
    <string name="admin">Admin</string>
    <string name="_0">0</string>
    <string name="alive">ALIVE</string>
</resources>