<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/titleRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/rules_title"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/bold"
        android:text="@string/rules_item_title"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bulb"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/ImgItemIcon"
        app:layout_constraintBottom_toTopOf="@+id/ItemContentOne"
        app:layout_constraintEnd_toStartOf="@+id/titleRules"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806"
        app:srcCompat="@drawable/healthpack" />


    <TextView
        android:id="@+id/ItemContentOne"
        android:layout_width="321dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/rules_item_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRules" />

    <Button
        android:id="@+id/btnPage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/general_btn_rounded"
        android:onClick="btnPage1_OnClick"
        android:text="@string/ButtonPageOne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnStartSite"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/btnStartSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/general_btn_rounded"
        android:onClick="btnStartSite_OnClick"
        android:text="@string/ButtonMainPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_item_content_shrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="146dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_item_content_market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_inventory_content"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/rules_leaderboard_title"
        android:textColor="@color/blue"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:text="@string/rules_leaderboard_content"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_leaderboard_content_one"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="388dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="27dp"
        app:srcCompat="@drawable/scoreboard"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/rules_chat_title"
        android:textColor="@color/blue"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="484dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_chat_content"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="520dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="26dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/chat"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="484dp" />

</androidx.constraintlayout.widget.ConstraintLayout>