<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1ECEC"
            android:layout_margin="4dp">

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="64dp"
                android:id="@+id/ingame_ranking_background">
                <TextView
                    android:id="@+id/ingame_leaderboard_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/_1"
                    android:textSize="24sp"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/green" />
            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/ingame_image"
                android:src="@drawable/runlogo"
                android:layout_toEndOf="@+id/ingame_ranking_background"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/ingame_leaderboard_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ingame_image"
                android:text="@string/admin"
                android:layout_marginStart="16dp"
                android:textColor="@color/blue"
                android:layout_centerVertical="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ingame_leaderboard_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ingame_leaderboard_username"
                android:text="@string/_0"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/blue"
                android:layout_centerVertical="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ingame_leaderboard_isalive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/alive"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/forestgreen"
                android:layout_centerVertical="true"
                android:textSize="24sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>